== 0.9.6 / ???

* Reject attempts to insert into stdio via <+ (#288)
* Support Comparable for Bud::Lattice values
* Improve MRI 1.8 compatibility
* Require ruby_parser >= 3.1.0

== 0.9.5 / 2012-11-24

* Lattice branch (Bloom^L) merged
* Compatibility with recent versions of ruby_parser (3.0.2+) and ruby2ruby
  (2.0.1+). Older versions of these two gems are no longer supported
* Add support for aggregate functions that take multiple input columns
* Add built-in aggregate function accum_pair(x, y), which produces a Set of
  pairs (two-element arrays [x,y])
* Support user-specified code blocks in payloads(), argagg(), argmin() and
  argmax()
* Change behavior of BudChannel#payloads for channels with two
  columns. Previously we returned a single *column* (scalar) value in this case;
  now we always return a tuple with k-1 columns
* More consistent behavior for BudCollection#sort when used outside Bloom
  programs
* Restore support for each_with_index() over Bud collections
* Restore functionality of Zookeeper-backed Bud collections and fix
  incompatibility with recent (> 0.4.4) versions of the Zookeeper gem
* Optimize parsing of Bloom statements, particularly for large Bloom programs
* Fix bug in argagg state materialization
* Fix bug in chaining argmin() or argmax() expressions
* Fix bug in chaining notin() expressions

== 0.9.4 / 2012-09-06

* Optimize grouping performance
* Fix regression in dbm-backed collections with MRI 1.8
* Fix regression in grouping operator with MRI 1.8 (#280)
* Fix bug in programs that applied non-monotonic operators to scratch
  collections under certain circumstances (#281)
* Fix bug in "notin" with multiple qualifiers (#282)

== 0.9.3 / 2012-08-20

* Change behavior of accum() aggregate to return a Set, rather than an Array in
  an unspecified order
* Fix several serious bugs in caching/invalidation of materialized operator
  state (#276, #278, #279)
* Avoid possible spurious infinite loop with dbm-backed collections